samples/_failures_safe/1761405189_042f94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43b450b8.c: In function ‘main’:
./samples/SAFE/__tmp_43b450b8.c:158:21: error: expected declaration or statement at end of input
  158 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_43b450b8.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43b450b8.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43b450b8.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43b450b8.c:158:21: error: expected declaration or statement at end of input
